# ballistics

my_lib/src/: CMakeLists.txt
my_lib/src/ballistics/EOP/: EOPContainer.cpp  EOPContainer.hpp  ReferenceSystemConverter.hpp
my_lib/src/ballistics/Interpolation/: Interpolant.hpp
my_lib/src/ballistics/conversions/: EOPContainer.cpp  EOPContainer.hpp  QuaternionConvertion.hpp  ReferenceSystemConverter.hpp  coordinateConverters.cpp  coordinateConverters.hpp
my_lib/src/ballistics/eop/: EOPContainer.cpp  ReferenceSystemConverter.hpp
my_lib/src/ballistics/ephemeris/: EphemerisCalculator.cpp  EphemerisCalculator.hpp
my_lib/src/ballistics/exceptions/: BallisticsException.cpp  BallisticsException.hpp
my_lib/src/ballistics/files/: parseEOP.cpp  parseEOP.hpp
my_lib/src/ballistics/forces/: AtmosphericFriction.hpp  CentralAndJ2Force.hpp  CentralForce.hpp  ForceCalculator.hpp  SolarRadiationPressure.cpp  SolarRadiationPressure.hpp  ThirdBodies.hpp
my_lib/src/ballistics/numeric_methods/: LeastSquares.hpp  NumericalMethod.hpp  numericMethods.hpp
my_lib/src/ballistics/time/: DutContainer.cpp  DutContainer.hpp  Time.hpp  TimeConverter.hpp
my_lib/src/ballistics/types/: SatelliteRHS.hpp  (+2 more)
my_lib/tests/: CMakeLists.txt  Paths.cpp  Paths.hpp  test_time.cpp
my_lib/tests/ephemeris/: test_ephemeris.cpp
my_lib/tests/exceptions/: test_exceptions.cpp
my_lib/tests/files/: test_parse_eop.cpp
my_lib/tests/forces/: test_CentralForce.cpp  test_ForceCalculator.cpp  test_SatelliteRHS.cpp
my_lib/tests/numericMethod/: test_NumericMethod.cpp
my_lib/tests/time/: test_time.cpp
(+2 files in other folders)
